[tool.poetry]
name = "procworld"
version = "0.0.1.dev0"
description = "game engine for procedurally generated games"
authors = ["ttymck <tyler@tylerkontra.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
